# starwars_project

./: Dockerfile  README.md  api.py  char_info.py  config.py  db.py  docker-compose.yml  fetch_homeworld.py  homeworld_cache.json  init_db.py  load_to_db.py  logger_config.py  main.py  model.py  new_char_info.py  pyproject.toml  requirement.txt  sample.env  star_wars_characters_complete.csv  star_wars_characters_complete.json  starwars.db  test_api.py
